# analytics-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  weekly-metrics.yml
config/: env.example  outcome-kpis.yaml  thresholds.yaml
data/: engagement-metrics.json  system-engagement-report.json  weekly-signals.json  weekly-signals.md
data/history/: engagement-metrics-2026-03-04.json  system-engagement-report-2026-02-24.json  system-engagement-report-2026-03-04.json
docs/adr/: 001-initial-architecture.md  002-privacy-first-analytics.md
docs/dashboard/: index.html
src/: __init__.py  aggregator.py  config.py  dashboard.py  github_activity.py  goatcounter.py  signals.py
tests/: test_aggregator.py  test_browser_os.py  test_config.py  test_dashboard.py  test_github_activity.py  test_goatcounter.py  test_referrers.py  test_signals.py
tests/fixtures/: engagement_metrics_previous.json  github_activity.json  goatcounter_pages.json
